# Custom-Programming-Language-For-AI

./: .gitignore  .replit  CMakeLists.txt  README.md  ai_lang  client.js  data.csv  example.ai  index.html  package-lock.json  package.json  pyproject.toml  replit.nix  server.js  styles.css  test_data.json  test_syntax  test_syntax.cpp  test_syntax.txt
Program test/: README.md  interaction_output_20250331_130125.txt  save_interaction.sh
ai_language/: "ml_model.pkl  CMakeLists.txt  DEVELOPMENT_NOTES.md  README.md  SYNTAX_FLOW.md  SYNTAX_REFERENCE.md  USAGE_GUIDE.md  ai_lang  ai_lang.cpp  comprehensive_test.ai  data.csv  ml_learning_curves.py  ml_model.pkl  model  organize_examples.sh  run_example.sh  show_time  show_time.cpp
ai_language/Program test/Data/: dl_learning_curves_data.csv  generate_plot.py  learning_curves_data.csv  learning_curves_interactive.html  qtable_data.csv  reward_data.csv  rl_rewards_data.csv
ai_language/Program test/Picture/: gnuplot_script.plt  learning_curves.html
ai_language/Program test/model/: "ml_model.mlmodel"  "my_first_model.mlmodel  "rl_model.rlmodel"  dl_test_model.dlmodel  ml_model.mlmodel  ml_test_model.mlmodel  model  model.dlmodel  multiline_test_model.pkl  my_first_model.mlmodel  my_model.rlmodel  rl_model.rlmodel  rl_multiline_model.ml  rl_test_model.rlmodel
ai_language/ai_language/Program test/model/: model.pkl
ai_language/datasets/: classification_data.csv  config.json  environment.json  iris.csv
ai_language/datasets/images/: README.txt
ai_language/docs/: index.md
ai_language/docs/development/: DEVELOPMENT_NOTES.md  README_SCIKIT.md  index.md
ai_language/docs/guides/: USAGE_GUIDE.md  index.md
ai_language/docs/references/: MODEL_FILE_EXTENSIONS.md  SYNTAX_FLOW.md  SYNTAX_REFERENCE.md  index.md
ai_language/examples/: README.md  auto_parameter_guide.ai  dl_example.ai  ml_example.ai  ml_training_example.cpp  model_extensions_example.ai  multiline_syntax_test.ai  new_syntax_example.ai  syntax_guide.ai  timezone_example.ai
ai_language/examples/dl_examples/: cnn.ai  neural_network.ai
ai_language/examples/ml_examples/: basic_ml_example.ai  classification.ai  linear_regression.ai  scikit_integration.ai  scikit_learn_demo.py
ai_language/examples/rl_examples/: basic_rl_example.ai  dqn.ai  new_syntax_rl.ai  q_learning.ai
ai_language/include/: BaseInterpreter.h  DLInterpreter.h  InterpreterFactory.h  MLInterpreter.h  RLInterpreter.h  ScikitLearnConnector.h  interpreter.h  lexer.h  parser.h  token_types.h
ai_language/include/connectors/: BaseConnector.h  Connector.h  ScikitLearnConnector.h
ai_language/include/interpreters/: BaseInterpreter.h  DLInterpreter.h  InterpreterFactory.h  MLInterpreter.h  RLInterpreter.h
ai_language/include/utils/: plotting.h
ai_language/src/: BaseInterpreter.cpp  DLInterpreter.cpp  InterpreterFactory.cpp  MLInterpreter.cpp  RLInterpreter.cpp  ScikitLearnConnector.cpp  ai_lang.cpp  interpreter.cpp  lexer.cpp  parser.cpp
ai_language/src/connectors/: Connector.cpp  ScikitLearnConnector.cpp
ai_language/src/interpreters/: BaseInterpreter.cpp  DLInterpreter.cpp  InterpreterFactory.cpp  MLInterpreter.cpp  RLInterpreter.cpp  RLInterpreter.h  interpreter.cpp
ai_language/src/utils/: plot_generator.py  plotting.cpp  show_time.cpp
ai_language/tests/: CMakeLists.txt  advanced_error_handling_test.ai  error_handling_test.ai  interpreter_test.cpp  lexer_test.cpp  parser_test.cpp
ai_language_notebook/: server.js
attached_assets/: Pasted---1743242119497.txt  Pasted--16-plot-learning-curves-Creating-learning-curves-plot-Generating-learning-curve-plot-DataFr-1744798069523.txt  Pasted--AI-start-1743417752621.txt  Pasted--AI-start-create-ML-load-dataset-datasets-linear-data-csv-type-csv-create-model-Linea-1743590090240.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-12-Building-CXX-object-CMakeFiles-ai-lang-1743445574736.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743582801358.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743582878477.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743585583246.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743587241627.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743587453792.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743595186468.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743751861385.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-6-Building-CXX-object-CMakeFiles-ai-lang-1743777182182.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-7-Building-CXX-object-CMakeFiles-ai-lang-1743580981888.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-7-Building-CXX-object-CMakeFiles-ai-lang-1743581080662.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-73-Built-target-ai-language-lib-home-ru-1743587565891.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-75-Built-target-ai-language-lib-home-ru-1743778374704.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-75-Built-target-ai-language-lib-home-ru-1743782556039.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-75-Built-target-ai-language-lib-home-ru-1743830320731.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-75-Built-target-ai-language-lib-home-ru-1743837555826.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-75-Built-target-ai-language-lib-home-ru-1743844483357.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743346390567.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743347359500.txt  Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743347404517.txt  (+84 more)
tests/: CMakeLists.txt  TestDataManager.cpp  TestDataProcessor.cpp  TestModel.cpp  TestUtils.cpp
(+369 files in other folders)
